--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://linktr.ee/henry.behave" />
+    <!-- <meta http-equiv="refresh" content="0; url=https://linktr.ee/henry.behave" /> -->
     <link rel="shortcut icon" type="image/png" href="favicon-32x32.png">
 </head>
+<body>
+    <script>
+        // if (string.indow.location.pathname)
+        window.location.replace("https://linktr.ee/henry.behave");
+    </script>
+</body>
 </html>
