--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="refresh" content="0; url=https://linktr.ee/henry.behave" /> -->
-    <link rel="shortcut icon" type="image/png" href="favicon-32x32.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.ico">
 </head>
 <body>
     <script>
