--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <!-- <meta http-equiv="refresh" content="0; url=https://linktr.ee/henry.behave" /> -->
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="./style.css">
+
+    <title>
+        Henry Behave | The Perfect Answer | New Music 2026
+    </title>
 </head>
 <body>
     <!-- <script>
