--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img id="speaker" class="mute" onclick="toggleMute()" src="speaker.png">
                 <h3 id="nowplaying" class="mute" >now playing: "The Perfect Answer"</h3>
                 <audio id="songaudio" loop>
-                    <source src="TPA-snippet.mp3" type="audio/mpeg">
+                    <source id="audiosrc" type="audio/mpeg">
                 </audio>
             </div>
         </div>
