test: remove logo

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div id="content">
             <!-- <h1>Henry Behave</h1> -->
             <div id="intro">
-                <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'index'})" href="/index.html">
+                <!-- <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'index'})" href="/index.html">
                     <img alt="Henry Behave logo" id="logo" src="logo-only-black.png" >
-                </a>
+                </a> -->
                 <p id="blurb">
                     "The Perfect Answer" EP available now.
                 </p>
