--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     
             <div id="musiclinks">
                 <p id="spotify">
-                    <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'spotify'})" href="https://open.spotify.com/album/7GW6W6WPZfb4otce6I0s9t?si=2bTPl5MkRAGXZlmo2_V-dQ">spotify</a>
+                    <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'spotify'})" href="https://open.spotify.com/album/7GW6W6WPZfb4otce6I0s9t?go=1">spotify</a>
                 </p>
 
                 <p id="youtube">
-                    <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'youtube'})" href="https://www.youtube.com/playlist?list=OLAK5uy_nvCcc18nJZGBfixphgC7gtqt5pak4EiVI">youtube</a>
+                    <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'youtube'})" href="https://www.youtube.com/watch?v=jdXM-j6rp3s&list=OLAK5uy_nvCcc18nJZGBfixphgC7gtqt5pak4EiVI&index=1">youtube</a>
                 </p>
 
                 <p id="tiktok">
