--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                     <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'bio'})" href="bio.html">bio</a>
                 </p>
 
+                <p id="press">
+                    <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'press'})" href="press.html">press</a>
+                </p>
+
                 <p id="cat">
                     <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'cat'})" href="cat.html">cat</a>
                 </p>
